[package]
name = "sky-mount"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sky-mount"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
aws-config = "1.8.1"
aws-sdk-s3 = "1.96.0"

clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5.15"
ctrlc = "3.4.7"
fuser = "0.15.1"
libc = "0.2.174"
seahash = "4.1.0"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
#tokio = { version = "1.45", features = ["rt-multi-thread", "macros"] }
