[package]
name = "sky-mount"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sky-mount"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
aws-config = "1.8.1"
aws-sdk-s3 = "1.96.0"
bincode = { version = "1.3.3" }

clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5.15"
ctrlc = "3.4.7"
dashmap = "6.1.0"
foundationdb = { version = "0.9.2", features = ["fdb-7_3", "serde"] }
fuser = "0.15.1"
libc = "0.2.174"
seahash = "4.1.0"
serde = "1.0.219"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio-rustls",
    "time",
] }
tempfile = "3.20.0"
thiserror = "2.0.12"
time = "0.3.41"
tokio = { version = "1.46.1", features = [
    "rt-multi-thread",
    "macros",
    "signal",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
uuid = { version = "1.17.0", features = ["v4"] }
#tokio = { version = "1.45", features = ["rt-multi-thread", "macros"] }
